[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Power_Ups/NRG_Power_Up.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Power_Ups/Proj-8x8-Blue.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="NRG_Power_Up" type="Area2D"]
collision_layer = 65536
collision_mask = 2
script = ExtResource( 1 )
how_much_nrg = 20

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Respawn_Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_NRG_Power_Up_body_entered"]
[connection signal="timeout" from="Respawn_Timer" to="." method="_on_Respawn_Timer_timeout"]
